maryChain/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BOOLEAN
    BOOLEANCAST
    CATCH
    DEF
    DOT
    DOUBLECAST
    EMPTY
    EQUALITY
    FINALLY
    FOREACH
    FUNC
    GREATER
    GREATEREQUAL
    HEAD
    IMPLIES
    INTEGERCAST
    LBRACK
    LEN
    LESS
    LESSEQUAL
    NAMESPACE_OP
    NOT
    NULL
    OR
    RBRACK
    STRINGCAST
    TAIL
    TRY

Grammar

Rule 0     S' -> program
Rule 1     program -> imports expression
Rule 2     program -> expression
Rule 3     import -> IMPORT IDENTIFIER AS IDENTIFIER
Rule 4     imports -> import
Rule 5     imports -> imports import
Rule 6     expression -> LET IDENTIFIER EQUALS expression IN expression
Rule 7     expression -> expression PLUS expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> expression TIMES expression
Rule 10    expression -> expression DIVIDE expression
Rule 11    expression -> MINUS expression
Rule 12    expression -> LPAREN expression RPAREN
Rule 13    term -> factor
Rule 14    factor -> STRING
Rule 15    factor -> NUMBER
Rule 16    factor -> TRUE
Rule 17    factor -> FALSE
Rule 18    expression -> WHILE expression DO expression
Rule 19    expression -> IF expression THEN expression ELSE expression
Rule 20    expression -> IF expression THEN expression
Rule 21    expression -> LAZY expression
Rule 22    term -> LCBRACE term RCBRACE
Rule 23    lambda -> LAMBDA LPAREN args RPAREN expression
Rule 24    expression -> expression PIPE expression
Rule 25    expression -> function_call
Rule 26    expression -> lambda
Rule 27    expression -> term
Rule 28    function_call -> function_call LPAREN args RPAREN
Rule 29    function_call -> function_call LPAREN RPAREN
Rule 30    function_call -> lambda LPAREN args RPAREN
Rule 31    function_call -> IDENTIFIER
Rule 32    args -> args COMMA arg
Rule 33    args -> arg
Rule 34    args -> <empty>
Rule 35    arg -> expression

Terminals, with rules where they appear

AND                  : 
AS                   : 3
BOOLEAN              : 
BOOLEANCAST          : 
CATCH                : 
COMMA                : 32
DEF                  : 
DIVIDE               : 10
DO                   : 18
DOT                  : 
DOUBLECAST           : 
ELSE                 : 19
EMPTY                : 
EQUALITY             : 
EQUALS               : 6
FALSE                : 17
FINALLY              : 
FOREACH              : 
FUNC                 : 
GREATER              : 
GREATEREQUAL         : 
HEAD                 : 
IDENTIFIER           : 3 3 6 31
IF                   : 19 20
IMPLIES              : 
IMPORT               : 3
IN                   : 6
INTEGERCAST          : 
LAMBDA               : 23
LAZY                 : 21
LBRACK               : 
LCBRACE              : 22
LEN                  : 
LESS                 : 
LESSEQUAL            : 
LET                  : 6
LPAREN               : 12 23 28 29 30
MINUS                : 8 11
NAMESPACE_OP         : 
NOT                  : 
NULL                 : 
NUMBER               : 15
OR                   : 
PIPE                 : 24
PLUS                 : 7
RBRACK               : 
RCBRACE              : 22
RPAREN               : 12 23 28 29 30
STRING               : 14
STRINGCAST           : 
TAIL                 : 
THEN                 : 19 20
TIMES                : 9
TRUE                 : 16
TRY                  : 
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

arg                  : 32 33
args                 : 23 28 30 32
expression           : 1 2 6 6 7 7 8 8 9 9 10 10 11 12 18 18 19 19 19 20 20 21 23 24 24 35
factor               : 13
function_call        : 25 28 29
import               : 4 5
imports              : 1 5
lambda               : 26 30
program              : 0
term                 : 22 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . imports expression
    (2) program -> . expression
    (4) imports -> . import
    (5) imports -> . imports import
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (3) import -> . IMPORT IDENTIFIER AS IDENTIFIER
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IMPORT          shift and go to state 15
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    program                        shift and go to state 1
    imports                        shift and go to state 2
    expression                     shift and go to state 3
    import                         shift and go to state 4
    function_call                  shift and go to state 12
    lambda                         shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> imports . expression
    (5) imports -> imports . import
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (3) import -> . IMPORT IDENTIFIER AS IDENTIFIER
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IMPORT          shift and go to state 15
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    expression                     shift and go to state 23
    import                         shift and go to state 24
    function_call                  shift and go to state 12
    lambda                         shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 17

state 3

    (2) program -> expression .
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . TIMES expression
    (10) expression -> expression . DIVIDE expression
    (24) expression -> expression . PIPE expression

    $end            reduce using rule 2 (program -> expression .)
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    PIPE            shift and go to state 29


state 4

    (4) imports -> import .

    LET             reduce using rule 4 (imports -> import .)
    MINUS           reduce using rule 4 (imports -> import .)
    LPAREN          reduce using rule 4 (imports -> import .)
    WHILE           reduce using rule 4 (imports -> import .)
    IF              reduce using rule 4 (imports -> import .)
    LAZY            reduce using rule 4 (imports -> import .)
    IMPORT          reduce using rule 4 (imports -> import .)
    IDENTIFIER      reduce using rule 4 (imports -> import .)
    LAMBDA          reduce using rule 4 (imports -> import .)
    LCBRACE         reduce using rule 4 (imports -> import .)
    STRING          reduce using rule 4 (imports -> import .)
    NUMBER          reduce using rule 4 (imports -> import .)
    TRUE            reduce using rule 4 (imports -> import .)
    FALSE           reduce using rule 4 (imports -> import .)


state 5

    (6) expression -> LET . IDENTIFIER EQUALS expression IN expression

    IDENTIFIER      shift and go to state 30


state 6

    (31) function_call -> IDENTIFIER .

    LPAREN          reduce using rule 31 (function_call -> IDENTIFIER .)
    PLUS            reduce using rule 31 (function_call -> IDENTIFIER .)
    MINUS           reduce using rule 31 (function_call -> IDENTIFIER .)
    TIMES           reduce using rule 31 (function_call -> IDENTIFIER .)
    DIVIDE          reduce using rule 31 (function_call -> IDENTIFIER .)
    PIPE            reduce using rule 31 (function_call -> IDENTIFIER .)
    $end            reduce using rule 31 (function_call -> IDENTIFIER .)
    RPAREN          reduce using rule 31 (function_call -> IDENTIFIER .)
    DO              reduce using rule 31 (function_call -> IDENTIFIER .)
    THEN            reduce using rule 31 (function_call -> IDENTIFIER .)
    COMMA           reduce using rule 31 (function_call -> IDENTIFIER .)
    IN              reduce using rule 31 (function_call -> IDENTIFIER .)
    ELSE            reduce using rule 31 (function_call -> IDENTIFIER .)


state 7

    (11) expression -> MINUS . expression
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    expression                     shift and go to state 31
    function_call                  shift and go to state 12
    lambda                         shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 17

state 8

    (12) expression -> LPAREN . expression RPAREN
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    expression                     shift and go to state 32
    function_call                  shift and go to state 12
    lambda                         shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 17

state 9

    (18) expression -> WHILE . expression DO expression
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    expression                     shift and go to state 33
    function_call                  shift and go to state 12
    lambda                         shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 17

state 10

    (19) expression -> IF . expression THEN expression ELSE expression
    (20) expression -> IF . expression THEN expression
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    expression                     shift and go to state 34
    function_call                  shift and go to state 12
    lambda                         shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 17

state 11

    (21) expression -> LAZY . expression
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    expression                     shift and go to state 35
    function_call                  shift and go to state 12
    lambda                         shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 17

state 12

    (25) expression -> function_call .
    (28) function_call -> function_call . LPAREN args RPAREN
    (29) function_call -> function_call . LPAREN RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    PLUS            reduce using rule 25 (expression -> function_call .)
    MINUS           reduce using rule 25 (expression -> function_call .)
    TIMES           reduce using rule 25 (expression -> function_call .)
    DIVIDE          reduce using rule 25 (expression -> function_call .)
    PIPE            reduce using rule 25 (expression -> function_call .)
    $end            reduce using rule 25 (expression -> function_call .)
    RPAREN          reduce using rule 25 (expression -> function_call .)
    DO              reduce using rule 25 (expression -> function_call .)
    THEN            reduce using rule 25 (expression -> function_call .)
    COMMA           reduce using rule 25 (expression -> function_call .)
    IN              reduce using rule 25 (expression -> function_call .)
    ELSE            reduce using rule 25 (expression -> function_call .)
    LPAREN          shift and go to state 36

  ! LPAREN          [ reduce using rule 25 (expression -> function_call .) ]


state 13

    (26) expression -> lambda .
    (30) function_call -> lambda . LPAREN args RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    PLUS            reduce using rule 26 (expression -> lambda .)
    MINUS           reduce using rule 26 (expression -> lambda .)
    TIMES           reduce using rule 26 (expression -> lambda .)
    DIVIDE          reduce using rule 26 (expression -> lambda .)
    PIPE            reduce using rule 26 (expression -> lambda .)
    $end            reduce using rule 26 (expression -> lambda .)
    RPAREN          reduce using rule 26 (expression -> lambda .)
    DO              reduce using rule 26 (expression -> lambda .)
    THEN            reduce using rule 26 (expression -> lambda .)
    COMMA           reduce using rule 26 (expression -> lambda .)
    IN              reduce using rule 26 (expression -> lambda .)
    ELSE            reduce using rule 26 (expression -> lambda .)
    LPAREN          shift and go to state 37

  ! LPAREN          [ reduce using rule 26 (expression -> lambda .) ]


state 14

    (27) expression -> term .

    PLUS            reduce using rule 27 (expression -> term .)
    MINUS           reduce using rule 27 (expression -> term .)
    TIMES           reduce using rule 27 (expression -> term .)
    DIVIDE          reduce using rule 27 (expression -> term .)
    PIPE            reduce using rule 27 (expression -> term .)
    $end            reduce using rule 27 (expression -> term .)
    RPAREN          reduce using rule 27 (expression -> term .)
    DO              reduce using rule 27 (expression -> term .)
    THEN            reduce using rule 27 (expression -> term .)
    COMMA           reduce using rule 27 (expression -> term .)
    IN              reduce using rule 27 (expression -> term .)
    ELSE            reduce using rule 27 (expression -> term .)
    LPAREN          reduce using rule 27 (expression -> term .)


state 15

    (3) import -> IMPORT . IDENTIFIER AS IDENTIFIER

    IDENTIFIER      shift and go to state 38


state 16

    (23) lambda -> LAMBDA . LPAREN args RPAREN expression

    LPAREN          shift and go to state 39


state 17

    (13) term -> factor .

    PLUS            reduce using rule 13 (term -> factor .)
    MINUS           reduce using rule 13 (term -> factor .)
    TIMES           reduce using rule 13 (term -> factor .)
    DIVIDE          reduce using rule 13 (term -> factor .)
    PIPE            reduce using rule 13 (term -> factor .)
    $end            reduce using rule 13 (term -> factor .)
    RPAREN          reduce using rule 13 (term -> factor .)
    DO              reduce using rule 13 (term -> factor .)
    THEN            reduce using rule 13 (term -> factor .)
    COMMA           reduce using rule 13 (term -> factor .)
    IN              reduce using rule 13 (term -> factor .)
    ELSE            reduce using rule 13 (term -> factor .)
    LPAREN          reduce using rule 13 (term -> factor .)
    RCBRACE         reduce using rule 13 (term -> factor .)


state 18

    (22) term -> LCBRACE . term RCBRACE
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    term                           shift and go to state 40
    factor                         shift and go to state 17

state 19

    (14) factor -> STRING .

    PLUS            reduce using rule 14 (factor -> STRING .)
    MINUS           reduce using rule 14 (factor -> STRING .)
    TIMES           reduce using rule 14 (factor -> STRING .)
    DIVIDE          reduce using rule 14 (factor -> STRING .)
    PIPE            reduce using rule 14 (factor -> STRING .)
    $end            reduce using rule 14 (factor -> STRING .)
    RPAREN          reduce using rule 14 (factor -> STRING .)
    DO              reduce using rule 14 (factor -> STRING .)
    THEN            reduce using rule 14 (factor -> STRING .)
    COMMA           reduce using rule 14 (factor -> STRING .)
    IN              reduce using rule 14 (factor -> STRING .)
    ELSE            reduce using rule 14 (factor -> STRING .)
    LPAREN          reduce using rule 14 (factor -> STRING .)
    RCBRACE         reduce using rule 14 (factor -> STRING .)


state 20

    (15) factor -> NUMBER .

    PLUS            reduce using rule 15 (factor -> NUMBER .)
    MINUS           reduce using rule 15 (factor -> NUMBER .)
    TIMES           reduce using rule 15 (factor -> NUMBER .)
    DIVIDE          reduce using rule 15 (factor -> NUMBER .)
    PIPE            reduce using rule 15 (factor -> NUMBER .)
    $end            reduce using rule 15 (factor -> NUMBER .)
    RPAREN          reduce using rule 15 (factor -> NUMBER .)
    DO              reduce using rule 15 (factor -> NUMBER .)
    THEN            reduce using rule 15 (factor -> NUMBER .)
    COMMA           reduce using rule 15 (factor -> NUMBER .)
    IN              reduce using rule 15 (factor -> NUMBER .)
    ELSE            reduce using rule 15 (factor -> NUMBER .)
    LPAREN          reduce using rule 15 (factor -> NUMBER .)
    RCBRACE         reduce using rule 15 (factor -> NUMBER .)


state 21

    (16) factor -> TRUE .

    PLUS            reduce using rule 16 (factor -> TRUE .)
    MINUS           reduce using rule 16 (factor -> TRUE .)
    TIMES           reduce using rule 16 (factor -> TRUE .)
    DIVIDE          reduce using rule 16 (factor -> TRUE .)
    PIPE            reduce using rule 16 (factor -> TRUE .)
    $end            reduce using rule 16 (factor -> TRUE .)
    RPAREN          reduce using rule 16 (factor -> TRUE .)
    DO              reduce using rule 16 (factor -> TRUE .)
    THEN            reduce using rule 16 (factor -> TRUE .)
    COMMA           reduce using rule 16 (factor -> TRUE .)
    IN              reduce using rule 16 (factor -> TRUE .)
    ELSE            reduce using rule 16 (factor -> TRUE .)
    LPAREN          reduce using rule 16 (factor -> TRUE .)
    RCBRACE         reduce using rule 16 (factor -> TRUE .)


state 22

    (17) factor -> FALSE .

    PLUS            reduce using rule 17 (factor -> FALSE .)
    MINUS           reduce using rule 17 (factor -> FALSE .)
    TIMES           reduce using rule 17 (factor -> FALSE .)
    DIVIDE          reduce using rule 17 (factor -> FALSE .)
    PIPE            reduce using rule 17 (factor -> FALSE .)
    $end            reduce using rule 17 (factor -> FALSE .)
    RPAREN          reduce using rule 17 (factor -> FALSE .)
    DO              reduce using rule 17 (factor -> FALSE .)
    THEN            reduce using rule 17 (factor -> FALSE .)
    COMMA           reduce using rule 17 (factor -> FALSE .)
    IN              reduce using rule 17 (factor -> FALSE .)
    ELSE            reduce using rule 17 (factor -> FALSE .)
    LPAREN          reduce using rule 17 (factor -> FALSE .)
    RCBRACE         reduce using rule 17 (factor -> FALSE .)


state 23

    (1) program -> imports expression .
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . TIMES expression
    (10) expression -> expression . DIVIDE expression
    (24) expression -> expression . PIPE expression

    $end            reduce using rule 1 (program -> imports expression .)
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    PIPE            shift and go to state 29


state 24

    (5) imports -> imports import .

    LET             reduce using rule 5 (imports -> imports import .)
    MINUS           reduce using rule 5 (imports -> imports import .)
    LPAREN          reduce using rule 5 (imports -> imports import .)
    WHILE           reduce using rule 5 (imports -> imports import .)
    IF              reduce using rule 5 (imports -> imports import .)
    LAZY            reduce using rule 5 (imports -> imports import .)
    IMPORT          reduce using rule 5 (imports -> imports import .)
    IDENTIFIER      reduce using rule 5 (imports -> imports import .)
    LAMBDA          reduce using rule 5 (imports -> imports import .)
    LCBRACE         reduce using rule 5 (imports -> imports import .)
    STRING          reduce using rule 5 (imports -> imports import .)
    NUMBER          reduce using rule 5 (imports -> imports import .)
    TRUE            reduce using rule 5 (imports -> imports import .)
    FALSE           reduce using rule 5 (imports -> imports import .)


state 25

    (7) expression -> expression PLUS . expression
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    expression                     shift and go to state 41
    function_call                  shift and go to state 12
    lambda                         shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 17

state 26

    (8) expression -> expression MINUS . expression
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22

    expression                     shift and go to state 42
    function_call                  shift and go to state 12
    lambda                         shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 17

state 27

    (9) expression -> expression TIMES . expression
    (6) expression -> . LET IDENTIFIER EQUALS expression IN expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . MINUS expression
    (12) expression -> . LPAREN expression RPAREN
    (18) expression -> . WHILE expression DO expression
    (19) expression -> . IF expression THEN expression ELSE expression
    (20) expression -> . IF expression THEN expression
    (21) expression -> . LAZY expression
    (24) expression -> . expression PIPE expression
    (25) expression -> . function_call
    (26) expression -> . lambda
    (27) expression -> . term
    (28) function_call -> . function_call LPAREN args RPAREN
    (29) function_call -> . function_call LPAREN RPAREN
    (30) function_call -> . lambda LPAREN args RPAREN
    (31) function_call -> . IDENTIFIER
    (23) lambda -> . LAMBDA LPAREN args RPAREN expression
    (13) term -> . factor
    (22) term -> . LCBRACE term RCBRACE
    (14) factor -> . STRING
    (15) factor -> . NUMBER
    (16) factor -> . TRUE
    (17) factor -> . FALSE

    LET             shift and go to state 5
    MINUS           shift and go to state 7
    LPAREN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    LAZY            shift and go to state 11
    IDENTIFIER      shift and go to state 6
    LAMBDA          shift and go to state 16
    LCBRACE         shift and go to state 18
    STRING          shift and go to state 19
    NUMBER          shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22
